# sigmoidalvision

./: .gitignore  README.md  pyproject.toml
tests/: test_downloader.py
