[tool.poetry]
name = "sigmoidalvision"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos@sigmoidal.ai>"]
readme = "README.md"
license = "MIT"
keywords = ["computer-vision", "machine-learning", "sigmoidal", "vision", "ai"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = { version = ">=4.5.5.64", optional = true }
opencv-python-headless = ">=4.5.5.64"
numpy = ">=1.21.2"
ipywidgets = "^8.1.2"
notebook = "^7.1.2"
nbconvert = "^7.16.3"


[tool.poetry.dev-dependencies]
twine = "^5.0.0"
wheel = "^0.43.0"
build = "^1.2.1"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88
profile = "black"